fixed remaining overflow mobile issue

--- a/css/about.css
+++ b/css/about.css
@@ -2,6 +2,6 @@
   font-size: 2.5rem;
   line-height: 3.3rem;
   max-width: 55ch;
-  padding: 10rem 4rem;
+  padding: 11rem 4rem 0;
   word-wrap: break-word;
 }
