--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -4,7 +4,6 @@
   align-items: center;
   font-family: sans-serif;
   color: #aaa;
-  margin-top: 15rem;
 }
 
 #carousel,
